--- a/ICTLAB/Dashboard/Dashboard.csproj
+++ b/ICTLAB/Dashboard/Dashboard.csproj
@@ -210,6 +210,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\loginController.js" />
     <Content Include="app\controllers\sensorController.js" />
     <Content Include="app\services\apiService.js" />
     <Content Include="Content\bootstrap.css" />
