--- a/ICTLAB/ICTLAB/WEBAPI.csproj
+++ b/ICTLAB/ICTLAB/WEBAPI.csproj
@@ -207,6 +207,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="apiControllers\HomeController.cs" />
     <Compile Include="apiControllers\SensorController.cs" />
     <Compile Include="apiControllers\TemperatureController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -249,11 +250,13 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="apiControllers\ValuesController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\SensorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Home.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Sensor.cs" />
     <Compile Include="Models\SensorType.cs" />
@@ -261,9 +264,13 @@
     <Compile Include="MongoDB\MongoDBConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="Repositories\HomeRepository.cs" />
+    <Compile Include="Repositories\IHomeRepository.cs" />
     <Compile Include="Repositories\ISensorRepository.cs" />
     <Compile Include="Repositories\SensorRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
+    <Compile Include="Services\HomeService.cs" />
+    <Compile Include="Services\IHomeService.cs" />
     <Compile Include="Services\ISensorService.cs" />
     <Compile Include="Services\SensorService.cs" />
     <Compile Include="Startup.cs" />
@@ -271,6 +278,7 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\controllers\accountController.js" />
+    <Content Include="app\controllers\homeController.js" />
     <Content Include="app\controllers\sensorController.js" />
     <Content Include="app\services\apiService.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -388,6 +396,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Login\LogOff.cshtml" />
     <Content Include="Views\Error\Unauthorised.cshtml" />
+    <Content Include="Views\Sensor\Add.cshtml" />
+    <Content Include="Views\Sensor\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
