--- a/ICTLAB/DataRegistrator/packages.config
+++ b/ICTLAB/DataRegistrator/packages.config
@@ -2,6 +2,11 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.4.3" targetFramework="net452" />
+  <package id="MongoDB.Driver" version="2.4.3" targetFramework="net452" />
+  <package id="MongoDB.Driver.Core" version="2.4.3" targetFramework="net452" />
   <package id="Quartz" version="2.5.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net452" />
   <package id="Topshelf" version="4.0.3" targetFramework="net452" />
 </packages>
