--- a/ICTLAB/ICTLAB/WEBAPI.csproj
+++ b/ICTLAB/ICTLAB/WEBAPI.csproj
@@ -284,6 +284,7 @@
     <Content Include="app\controllers\homeController.js" />
     <Content Include="app\controllers\sensorController.js" />
     <Content Include="app\directives\3MonthChart.js" />
+    <Content Include="app\directives\counterDirective.js" />
     <Content Include="app\services\apiService.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
@@ -297,6 +298,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\Three.js\OBJLoader.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\bootstrap-switch.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -356,6 +358,7 @@
     <Content Include="Content\font-awesome-4.7.0\scss\_screen-reader.scss" />
     <Content Include="Content\font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="Content\font-awesome-4.7.0\scss\_variables.scss" />
+    <Content Include="CHIBBHouse.obj" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\highcharts.src.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -368,6 +371,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\Three.js\ColladaLoader.js" />
+    <Content Include="Scripts\Three.js\HomeVisualisation.js" />
+    <Content Include="Scripts\Three.js\Three.js" />
     <Content Include="Views\401Unauthorized.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -406,6 +412,8 @@
     <Content Include="Views\Sensor\Index.cshtml" />
     <Content Include="Views\Sensor\Details.cshtml" />
     <Content Include="Views\Sensor\Manage.cshtml" />
+    <Content Include="Scripts\Three.js\CHIBBHouse.obj" />
+    <Content Include="Views\Sensor\CHIBBHouse.obj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
