--- a/ICTLAB/ICTLAB/WEBAPI.csproj
+++ b/ICTLAB/ICTLAB/WEBAPI.csproj
@@ -208,6 +208,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="apiControllers\HomeController.cs" />
+    <Compile Include="apiControllers\ModelController.cs" />
     <Compile Include="apiControllers\SensorController.cs" />
     <Compile Include="apiControllers\TemperatureController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -298,6 +299,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\Three.js\JSONLoader.js" />
     <Content Include="Scripts\Three.js\OBJLoader.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\bootstrap-switch.min.js" />
@@ -358,7 +360,7 @@
     <Content Include="Content\font-awesome-4.7.0\scss\_screen-reader.scss" />
     <Content Include="Content\font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="Content\font-awesome-4.7.0\scss\_variables.scss" />
-    <Content Include="CHIBBHouse.obj" />
+    <Content Include="Content\Models\chibb.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\highcharts.src.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -374,6 +376,7 @@
     <Content Include="Scripts\Three.js\ColladaLoader.js" />
     <Content Include="Scripts\Three.js\HomeVisualisation.js" />
     <Content Include="Scripts\Three.js\Three.js" />
+    <Content Include="Scripts\Unity\HomeHelper.js" />
     <Content Include="Views\401Unauthorized.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -412,8 +415,6 @@
     <Content Include="Views\Sensor\Index.cshtml" />
     <Content Include="Views\Sensor\Details.cshtml" />
     <Content Include="Views\Sensor\Manage.cshtml" />
-    <Content Include="Scripts\Three.js\CHIBBHouse.obj" />
-    <Content Include="Views\Sensor\CHIBBHouse.obj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
