--- a/ICTLAB/ICTLAB/WEBAPI.csproj
+++ b/ICTLAB/ICTLAB/WEBAPI.csproj
@@ -255,7 +255,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\HomeHelper.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CreateSensor.cs" />
@@ -286,6 +285,7 @@
     <Content Include="app\controllers\sensorController.js" />
     <Content Include="app\directives\3MonthChart.js" />
     <Content Include="app\directives\counterDirective.js" />
+    <Content Include="app\directives\SensorCorrelationChart.js" />
     <Content Include="app\services\apiService.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
@@ -299,8 +299,6 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\Three.js\JSONLoader.js" />
-    <Content Include="Scripts\Three.js\OBJLoader.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\bootstrap-switch.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -373,10 +371,6 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Scripts\Three.js\ColladaLoader.js" />
-    <Content Include="Scripts\Three.js\HomeVisualisation.js" />
-    <Content Include="Scripts\Three.js\Three.js" />
-    <Content Include="Scripts\Unity\HomeHelper.js" />
     <Content Include="Views\401Unauthorized.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -415,6 +409,7 @@
     <Content Include="Views\Sensor\Index.cshtml" />
     <Content Include="Views\Sensor\Details.cshtml" />
     <Content Include="Views\Sensor\Manage.cshtml" />
+    <Content Include="Views\Sensor\Visualisations.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
