--- a/ICTLAB/ICTLAB/Web.config
+++ b/ICTLAB/ICTLAB/Web.config
@@ -54,6 +54,17 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
+    <staticContent>
+       Unity 5.x 
+      <mimeMap fileExtension=".data" mimeType="application/binary" />
+      <mimeMap fileExtension=".mem" mimeType="application/binary" />
+
+       Unity 5.3 
+      <mimeMap fileExtension=".datagz" mimeType="application/binary" />
+      <mimeMap fileExtension=".jsgz" mimeType="application/binary" />
+      <mimeMap fileExtension=".memgz" mimeType="application/binary" />
+      <mimeMap fileExtension=".unityweb" mimeType="application/binary"/>
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
