--- a/ICTLAB/ICTLAB/Web.config
+++ b/ICTLAB/ICTLAB/Web.config
@@ -55,11 +55,11 @@
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <staticContent>
-       Unity 5.x 
+       <!--Unity 5.x--> 
       <mimeMap fileExtension=".data" mimeType="application/binary" />
       <mimeMap fileExtension=".mem" mimeType="application/binary" />
 
-       Unity 5.3 
+       <!--Unity 5.3--> 
       <mimeMap fileExtension=".datagz" mimeType="application/binary" />
       <mimeMap fileExtension=".jsgz" mimeType="application/binary" />
       <mimeMap fileExtension=".memgz" mimeType="application/binary" />
