removed some unused code

--- a/ICTLAB/ICTLAB/WEBAPI.csproj
+++ b/ICTLAB/ICTLAB/WEBAPI.csproj
@@ -295,6 +295,10 @@
     <Content Include="app\directives\counterDirective.js" />
     <Content Include="app\directives\SensorCorrelationChart.js" />
     <Content Include="app\services\apiService.js" />
+    <Content Include="App_Data\aspnet-ICTLAB-20170316060559.mdf" />
+    <Content Include="App_Data\aspnet-ICTLAB-20170316060559_log.ldf">
+      <DependentUpon>aspnet-ICTLAB-20170316060559.mdf</DependentUpon>
+    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -367,6 +371,7 @@
     <Content Include="Content\font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="Content\font-awesome-4.7.0\scss\_variables.scss" />
     <Content Include="Content\Models\chibb.json" />
+    <None Include="Properties\PublishProfiles\ictlab.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\highcharts.src.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -437,9 +442,7 @@
     <Content Include="Scripts\Unity\Build\Unity Projects.json" />
     <Content Include="Views\Sensor\Update.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
